--- a/pycon_graphql/frontend/templates/frontend/index.html
+++ b/pycon_graphql/frontend/templates/frontend/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
   <title>Django - React</title>
 </head>
 <body>
   <section class="section">
-    <div class="container">
+    <div class="ui container">
           <div id="app" class="columns"><!-- React --></div>
     </div>
   </section>
