--- a/pycon_graphql/frontend/templates/frontend/index.html
+++ b/pycon_graphql/frontend/templates/frontend/index.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
-  <title>Django - React</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css">
+    <style>
+        .leaflet-container {
+            height: 400px;
+            width: 100%;
+            margin: 0 auto;
+            border-radius: 10px;
+            border-style: solid;
+            border-width: 2px;
+            border-color: #bebdc2;
+        }
+        .ui.secondary.inverted.pointing.menu {
+          border:none;
+        }
+
+        .ui.inverted.secondary.menu .active.item {
+          background:transparent;
+        }
+    </style>
+    <title>Django - React</title>
 </head>
 <body>
-  <section class="section">
+<section class="section">
     <div id="app" class="columns"><!-- React --></div>
-  </section>
+</section>
 </body>
 {% load static %}
 <script src="{% static "frontend/main.js" %}"></script>
