Added User filterset and updated Readme.

--- a/pycon_graphql/frontend/templates/frontend/index.html
+++ b/pycon_graphql/frontend/templates/frontend/index.html
@@ -23,7 +23,7 @@
           background:transparent;
         }
     </style>
-    <title>Django - React</title>
+    <title>Django GraphQL - React</title>
 </head>
 <body>
 <section class="section">
